# http-grpc_server

./: CMakeLists.txt  Dockerfile  docker-compose.yml  script.sh  text.txt
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/app/: CMakeLists.txt
lib/app/include/: server.hpp
lib/app/resource/: main.proto
lib/app/src/: CMakeLists.txt  generate.sh  server.cpp
lib/storage/: CMakeLists.txt
lib/storage/include/: IStorageManager.hpp  PostgresStorageManager.hpp  Structures.hpp
lib/storage/src/: PostgresStorageManager.cpp
numbers/: CMakeLists.txt  Dockerfile
numbers/app/: CMakeLists.txt  main.cpp
numbers/lib/: CMakeLists.txt
numbers/lib/app/: CMakeLists.txt
numbers/lib/app/include/: server.hpp
numbers/lib/app/resource/: number.proto
numbers/lib/app/src/: CMakeLists.txt  generate.sh  server.cpp
